--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -7,32 +7,34 @@ body {
 	font-family: Arial, sans-serif;
 }
 
-header {
-	background-color: #222;
-	padding: 1rem;
-}
-
 nav {
-	background-color: #222;
-	padding: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
-
-nav ul {
+  
+nav img {
+	height: 5rem;
+	padding: 10px; /* Add padding to the logo */
+}
+  
+#nav-links {
 	list-style-type: none;
 	padding: 0;
+	margin: 0;
 	display: flex;
-	flex-direction: row;
+	align-items: center; /* Align navigation items vertically with the logo */
 }
-
-nav ul li {
-	display: inline-block;
+  
+#nav-links li {
 	margin-right: 1rem;
-}
-
-nav ul li a {
-	color: white;
+  }
+  
+#nav-links li a {
+	color: rgb(0, 0, 0);
 	text-decoration: none;
 	padding: 0.5rem 1rem;
+	font-size: 2rem;
 }
 
 #hamburger-menu {
@@ -62,6 +64,15 @@ footer {
 header h1{
     color: white;
 }
+
+header {
+	background-color: #ffffff;
+	padding: 1rem;
+	border: 1px solid black;
+  }
+  
+
+  
 
 @media screen and (max-width: 768px) {
 	nav ul {
