--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -45,7 +45,7 @@ nav img {
 #hamburger-menu div {
 	width: 25px;
 	height: 3px;
-	background-color: white;
+	background-color: rgb(0, 0, 0);
 	margin: 4px;
 }
 
@@ -54,11 +54,11 @@ main {
 }
 
 footer {
-	background-color: #222;
+	background-color: #ffffff;
 	padding: 1rem;
 	text-align: center;
 	margin-top: 1rem;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 header h1{
@@ -70,9 +70,48 @@ header {
 	padding: 1rem;
 	border: 1px solid black;
   }
+
+  .user-icon img {
+	height: 6rem;
+
+  }
   
+  .user-icon {
+	position: absolute; 
+	top: 1rem; 
+	right: 2rem; 
+  }
+
+
+  /* Person specified content box*/
+  .aboutorigame {
+	display: flex;
+	border: #ddd 1px solid;
+	margin-left: 5%;
+	margin-right: 5%;
+  }
+  
+  .origame {
+	margin: 2%;
+	width: 15rem;
+	display: flex;
+	flex-direction: column;
+  }
+  
+  .logotext {
+	margin: 2%;
+	display: flex;
+	flex-direction: column;
+  }
 
   
+  .text {
+	font-size: 1.5rem;
+	color: #000000;
+	text-align: left;
+	margin-left: 5%;
+
+  }
 
 @media screen and (max-width: 768px) {
 	nav ul {
@@ -82,4 +121,8 @@ header {
 	#hamburger-menu {
 		display: block;
 	}
+
+	.logotext {
+		flex-direction: column;
+	  }
 }
