--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -34,7 +34,7 @@ nav img {
 	color: rgb(0, 0, 0);
 	text-decoration: none;
 	padding: 0.5rem 1rem;
-	font-size: 2rem;
+	font-size: 1.7rem;
 }
 
 #hamburger-menu {
@@ -138,6 +138,35 @@ header {
   }
 
   .malcomtext h2{
+    font-size: 3rem;
+    color:  rgb(207, 28, 88);
+  }
+
+  .aboutyeji {
+    display: flex;
+    border: #ddd 1px solid;
+    margin-left: 5%;
+    margin-right: 5%;
+	justify-content: left;
+    
+  }
+ 
+  .yeji {
+    margin: 2%;
+    width: 15rem;
+    flex-direction: column;
+    display: flex;
+  }
+  
+  .yejitext {
+    font-size: 1.5rem;
+    color: #000000;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    text-align: left;
+  }
+
+  .yejiext h2{
     font-size: 3rem;
     color:  rgb(207, 28, 88);
   }
