--- a/styles/tutorialstyle.css
+++ b/styles/tutorialstyle.css
@@ -37,6 +37,11 @@ nav img {
 	font-size: 1.7rem;
 }
 
+h1 {
+	margin-left: 5%;
+	font-size: 4rem;
+}
+
 #hamburger-menu {
 	display: none;
 	cursor: pointer;
@@ -82,6 +87,80 @@ header {
 	right: 2rem; 
   }
 
+  .heading {
+	display: flex;
+	align-items: center;
+	border: 1px solid black;
+  }
+
+  .title{
+	justify-content: left;
+	display: flex;
+	margin-left: 5%;
+  }
+
+  .filter{
+	justify-content: right;
+	display: flex;
+	margin-right: 5%;
+  }
+
+  
+  .dropbtn {
+	background-color: #5c5c5c;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+	background-color: #4d4d4d;
+  }
+
+  #myInput {
+	box-sizing: border-box;
+	background-image: url('searchicon.png');
+	background-position: 14px 12px;
+	background-repeat: no-repeat;
+	font-size: 16px;
+	padding: 14px 20px 12px 45px;
+	border: none;
+	border-bottom: 1px solid #ddd;
+  }
+  
+  #myInput:focus {outline: 3px solid #ddd;}
+  
+  .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+  .dropdownContent {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+
+  .dropdownContent a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+
+  .dropdownContent a:hover {
+	background-color: #f1f1f1;
+  }
+
+  .show {
+	display: block;
+  }
+  
 
 
 @media screen and (max-width: 768px) {
