Nav bar fix, contact page

--- a/styles/tutorialstyle.css
+++ b/styles/tutorialstyle.css
@@ -14,7 +14,7 @@ nav {
 }
   
 nav img {
-	height: 5rem;
+	height: 4rem;
 	padding: 10px; /* Add padding to the logo */
 }
   
@@ -33,13 +33,8 @@ nav img {
   #nav-links li a {
 	color: rgb(0, 0, 0);
 	text-decoration: none;
-	padding: 0.5rem 1rem;
-	font-size: 1.7rem;
-}
-
-h1 {
-	margin-left: 5%;
-	font-size: 4rem;
+	margin-left: 1rem;
+	font-size: 1.3rem;
 }
 
 #hamburger-menu {
@@ -72,18 +67,18 @@ header h1{
 
 header {
 	background-color: #ffffff;
-	padding: 1rem;
-	border: 1px solid black;
+	padding: 0.5rem;
+	border-bottom: 1px solid black;
   }
 
   .user-icon img {
-	height: 6rem;
+	height: 4.5rem;
 
   }
   
   .user-icon {
 	position: absolute; 
-	top: 1rem; 
+	top: 0.5rem; 
 	right: 2rem; 
   }
 
