--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,8 +123,8 @@ header {
   
   .container {
 	width: 100%;
-	max-width: 800px;
-	max-height: 600px;
+	max-width: 50rem;
+	max-height: 30rem;
 	height: 100%;
 	transform-style: preserve-3d;
 	display: flex;
