--- a/styles/contactstyle.css
+++ b/styles/contactstyle.css
@@ -2,31 +2,43 @@
 	box-sizing: border-box;
   }
   
-  body {
-	margin: 0;
+  html, body {
+	width: 100%;
+	height: 100%;
 	font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+	
   }
-  
+
   nav {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-  }
+    background-color: #DED5F0;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    left:0;
+    margin: 0px;
+    width: 100%; /* Full width */
+    right: 0;
+    padding:10px 20px 
+}
   
-  nav img {
+nav img {
 	height: 4rem;
 	padding: 10px; /* Add padding to the logo */
-  }
+}
   
-  #nav-links {
+#nav-links {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
 	display: flex;
 	align-items: center; /* Align navigation items vertically with the logo */
-  }
+}
   
-  #nav-links li {
+#nav-links li {
 	margin-right: 1rem;
   }
   
@@ -35,31 +47,23 @@
 	text-decoration: none;
 	margin-left: 1rem;
 	font-size: 1.3rem;
-  }
-  
-  #hamburger-menu {
+}
+
+#hamburger-menu {
 	display: none;
 	cursor: pointer;
-  }
-  
-  #hamburger-menu div {
+}
+
+#hamburger-menu div {
 	width: 25px;
 	height: 3px;
 	background-color: rgb(0, 0, 0);
 	margin: 4px;
-  }
-  
-  main {
+}
+
+main {
 	padding: 2rem;
-  }
-  
-  footer {
-	background-color: #ffffff;
-	padding: 1rem;
-	text-align: center;
-	margin-top: 1rem;
-	color: rgb(0, 0, 0);
-  }
+}
   
   header h1 {
 	color: white;
