--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -6,53 +6,10 @@
  body {
   margin: 0;
   font-family: Arial, sans-serif;
+  background-color: #F4F4ED;
  }
  
- nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
- }
-   
- nav img {
-  height: 4rem;
-  padding: 10px; /* Add padding to the logo */
- }
-   
- #nav-links {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center; /* Align navigation items vertically with the logo */
- }
-   
- #nav-links li {
-  margin-right: 1rem;
-   }
-   
-   #nav-links li a {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  margin-left: 1rem;
-  font-size: 1.3rem;
- }
  
- #hamburger-menu {
-  display: none;
-  cursor: pointer;
- }
- 
- #hamburger-menu div {
-  width: 25px;
-  height: 3px;
-  background-color: rgb(0, 0, 0);
-  margin: 4px;
- }
- 
- main {
-  padding: 2rem;
- }
  
  footer {
   background-color: #ffffff;
@@ -82,12 +39,14 @@
   top: 0.5rem; 
   right: 2rem; 
    }
- 
-   .aboutus h1{
-     color: #000000;
-     font-size: 3rem;
-     text-align: center;
-   }
+
+   
+  
+  .aboutus h1 {
+    color: #6e657e;
+    font-size: 4rem;
+    text-align: center;
+  }
  
  
    /* Person specified content box*/
@@ -100,7 +59,7 @@
    
    .origame {
   margin: 2%;
-  width: 15rem;
+  width: 10rem;
   display: flex;
   flex-direction: column;
    }
@@ -110,14 +69,23 @@
   display: flex;
   flex-direction: column;
    }
+
+   .text {
+    width: 40%;
+   }
+
+   .text img{
+    width: 30%;
+   }
  
    
-   .text {
-  font-size: 1.5rem;
+   .text p{
+  font-size: 1rem;
   color: #000000;
   text-align: left;
   margin-left: 5%;
- 
+  display: flex;
+  flex-direction: column;
    }
  
    .aboutgoals {
@@ -130,23 +98,24 @@
    }
   
    .goalsimg {
-     margin: 2%;
-     width: 15rem;
+     margin-left: 2%;
+     width: 25rem;
      flex-direction: column;
      display: flex;
    }
    
    .goals {
-     font-size: 1.5rem;
+     font-size: 1rem;
      color: #000000;
      margin-left: 1rem;
      margin-right: 1rem;
      text-align: right;
+     width: 40%;
    }
  
    .goals h2{
-     font-size: 3rem;
-     color: #f0307a;;
+     font-size: 2rem;
+     color: #6e657e;;
    }
  
    .goals p{
@@ -163,23 +132,24 @@
    }
   
    .visionimg {
-     margin: 2%;
-     width: 15rem;
+     margin-right: 2%;
+     width: 25rem;
      flex-direction: column;
      display: flex;
    }
  
    .vision h2{
-     font-size: 3rem;
-     color: #f0307a;
+    font-size: 2rem;
+    color: #6e657e;
    }
    
    .vision {
-     font-size: 1.5rem;
+     font-size: 1rem;
      color: #000000;
      margin-left: 1rem;
      margin-right: 1rem;
      text-align: left;
+     width: 40%;
    }
  
    .vision p{
@@ -192,46 +162,72 @@
      display: flex;
      flex-direction: column;
      padding: 2%;
+     background-color: #DED5F0;
+     width: 100%;
    }
  
    .team h1{
-     border: 3px solid darkred;
-     padding: 15px 32px;
-     display: inline-block;
      justify-content: center;
      font-size: 3rem;
-     background-color:#f0307a;;
      text-align: center;
-     color: white;
+     color: #383146;
      margin: auto;
    }
 
    .aboutmalc {
     display: flex;
-    border: #ddd 1px solid;
     margin-left: 5%;
     margin-right: 5%;
    justify-content: right;
    text-align: right;
-    
+    background-color: #F4F4ED;
+    border: 1px solid black;
+    padding-top: 2rem;
   }
  
-  .malcimg {
-    margin: 2%;
-    width: 15rem;
-    flex-direction: column;
-    display: flex;
-  }
+  .malcimg{
+  margin: 2%;
+  width: 10rem;
+  height: 10rem; 
+  border-radius: 50%;
+  overflow: hidden; 
+  
+}
 
+.yejiimg{
+  margin: 2%;
+  width: 10rem;
+  height: 10rem; 
+  border-radius: 50%;
+  overflow: hidden; 
+  
+}
+
+
+.malcimg img, .yejiimg img {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+} 
+
+.malcom p{
+  margin-left: 50%;
+  font-size: 1rem;
+}
+
+.yeji p{
+  margin-right: 50%;
+  font-size: 1rem;
+}
 
   .malcom h2{
-    font-size: 3rem;
-    color: #f0307a;
+    font-size: 2rem;
+    color: #6e657e;
   }
   
   .malcom h3{
     font-size: 1.5rem;
-    color: #f0307a;  
+    color: #6e657e;
   }
 
   .aboutyeji {
@@ -240,24 +236,19 @@
     margin-left: 5%;
     margin-right: 5%;
    justify-content: left;
-    
-  }
- 
-  .yejiimg {
-    margin: 2%;
-    width: 15rem;
-    flex-direction: column;
-    display: flex;
+   background-color: #F4F4ED;
+   border: 1px solid black;
+   padding-top: 2rem;
   }
 
   .yeji h2{
-    font-size: 3rem;
-    color: #f0307a;
+    font-size: 2rem;
+    color: #6e657e;
   }
 
   .yeji h3{
     font-size: 1.5rem;
-    color: #f0307a;
+    color: #6e657e;
   }
 
   
