--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -1,47 +1,91 @@
-
 * {
-  box-sizing: border-box;
- }
- 
- body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #F4F4ED;
- }
- 
- 
- 
- footer {
-  background-color: #ffffff;
-  padding: 1rem;
-  text-align: center;
-  margin-top: 1rem;
-     color: rgb(0, 0, 0);
- }
- 
- header h1{
-     color: white;
- }
- 
- header {
-  background-color: #ffffff;
-  padding: 0.5rem;
-  border-bottom: 1px solid black;
-   }
- 
-   .user-icon img {
-  height: 4.5rem;
- 
-   }
-   
-   .user-icon {
-  position: absolute; 
-  top: 0.5rem; 
-  right: 2rem; 
-   }
+	box-sizing: border-box;
+}
 
-   
+
+html, body {
+	width: 100%;
+	height: 100%;
+	font-family: Arial, sans-serif;
+	
+  }
+
+  nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
   
+nav img {
+	height: 4rem;
+	padding: 10px; /* Add padding to the logo */
+}
+  
+#nav-links {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center; /* Align navigation items vertically with the logo */
+}
+  
+#nav-links li {
+	margin-right: 1rem;
+  }
+  
+  #nav-links li a {
+	color: rgb(0, 0, 0);
+	text-decoration: none;
+	margin-left: 1rem;
+	font-size: 1.3rem;
+}
+
+#hamburger-menu {
+	display: none;
+	cursor: pointer;
+}
+
+#hamburger-menu div {
+	width: 25px;
+	height: 3px;
+	background-color: rgb(0, 0, 0);
+	margin: 4px;
+}
+
+main {
+	padding: 2rem;
+}
+
+footer {
+	background-color: #ffffff;
+	padding: 1rem;
+	text-align: center;
+	margin-top: 1rem;
+    color: rgb(0, 0, 0);
+}
+
+header h1{
+    color: white;
+}
+
+header {
+	background-color: #ffffff;
+	padding: 0.5rem;
+	border-bottom: 1px solid black;
+  }
+
+  .user-icon img {
+	height: 4.5rem;
+
+  }
+  
+  .user-icon {
+	position: absolute; 
+	top: 0.5rem; 
+	right: 2rem; 
+  }
+
+
   .aboutus h1 {
     color: #6e657e;
     font-size: 4rem;
