--- a/styles/login.css
+++ b/styles/login.css
@@ -23,6 +23,10 @@ nav {
   border-bottom: 1px solid black;
 }
 
+a:hover {
+  background-color: #f0f0f0;
+}
+
 nav img {
   height: 4rem;
   padding: 10px; /* Add padding to the logo */
