--- a/styles/register.css
+++ b/styles/register.css
@@ -70,6 +70,9 @@ nav {
     font-size: 2rem;
   }
   
+  a:hover {
+    background-color: #f0f0f0;
+  }
   
   /* Example styles for form inputs */
   .form-group {
