--- a/styles/register.css
+++ b/styles/register.css
@@ -49,6 +49,7 @@ nav {
     align-items: stretch; /* Stretch flex items to match height */
     margin-right: auto;
     margin-left: auto;
+    height: 70vh;
   }
   
   .image-container {
