--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,6 +142,20 @@ header {
 	}
   }
 
+  .modal {
+	display: none;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: white;
+	padding: 20px;
+	border: 1px solid #ccc;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	width: 70%; 
+	height: 80%; 
+  }
+
   /* review_page.html Submit Button CSS */
   button,
   button:focus,
