--- a/styles/tutorialstyle.css
+++ b/styles/tutorialstyle.css
@@ -94,117 +94,153 @@ header {
 	margin-left: 5%;
   }
 
-  .filter{
-	justify-content: right;
+  .sec-center {
+	position: relative;
+	max-width: 100%;
+	text-align: left;
+	z-index: 200;
+  }
+  [type="checkbox"]:checked,
+  [type="checkbox"]:not(:checked){
+	position: absolute;
+	left: -9999px;
+	opacity: 0;
+	pointer-events: none;
+  }
+
+  .dropdown:checked + label,
+  .dropdown:not(:checked) + label{
+	position: relative;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 2;
+	height: 50px;
+	transition: all 200ms linear;
+	border-radius: 4px;
+	width: 220px;
+	letter-spacing: 1px;
+	display: -webkit-inline-flex;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	justify-content: center;
+	-ms-flex-pack: center;
+	text-align: center;
+	border: none;
+	background-color: #ffeba7;
+	cursor: pointer;
+	color: #102770;
+	box-shadow: 0 12px 35px 0 rgba(255,235,167,.15);
+  }
+  .dark-light:checked ~ .sec-center .for-dropdown{
+	background-color: #102770;
+	color: #ffeba7;
+	box-shadow: 0 12px 35px 0 rgba(16,39,112,.25);
+  }
+
+  .dropdown:checked + label:before{
+	pointer-events: auto;
+  }
+  .dropdown:not(:checked) + label .uil {
+	font-size: 24px;
+	margin-left: 10px;
+	transition: transform 200ms linear;
+  }
+  .dropdown:checked + label .uil {
+	transform: rotate(180deg);
+	font-size: 24px;
+	margin-left: 10px;
+	transition: transform 200ms linear;
+  }
+  .section-dropdown {
+	position: absolute;
+	padding: 5px;
+	background-color: #ffffff;
+	top: 70px;
+	width: 50%;
+	border-radius: 4px;
+	display: block;
+	box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
+	z-index: 2;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown {
+	background-color: #fff;
+	box-shadow: 0 14px 35px 0 rgba(9,9,12,0.15);
+  }
+  .dropdown:checked ~ .section-dropdown{
+	opacity: 1;
+	pointer-events: auto;
+	transform: translateY(0);
+  }
+  .section-dropdown:before {
+	position: absolute;
+	top: -20px;
+	left: 0;
+	width: 100%;
+	height: 20px;
+	content: '';
+	display: block;
+	z-index: 1;
+  }
+  .section-dropdown:after {
+	position: absolute;
+	top: -7px;
+	left: 30px;
+	width: 0; 
+	height: 0; 
+	border-left: 8px solid transparent;
+	border-right: 8px solid transparent; 
+	border-bottom: 8px solid #111;
+	content: '';
+	display: block;
+	z-index: 2;
+	transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown:after {
+	border-bottom: 8px solid #fff;
+  }
+  
+  .sec-center a{
+	position: relative;
+	color: black;
+	transition: all 200ms linear;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+	border-radius: 2px;
+	padding: 5px 0;
+	padding-left: 20px;
+	padding-right: 15px;
+	margin: 2px 0;
+	text-align: left;
+	text-decoration: none;
+	display: -ms-flexbox;
 	display: flex;
-	margin-right: 5%;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: space-between;
+	  -ms-flex-pack: distribute;
   }
 
-  
-  .dropbtn {
-	background-color: #5c5c5c;
-	color: white;
-	padding: 16px;
-	font-size: 16px;
-	border: none;
-	cursor: pointer;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
-	background-color: #4d4d4d;
-  }
-
-  #myInput {
-	box-sizing: border-box;
-	background-image: url('searchicon.png');
-	background-position: 14px 12px;
-	background-repeat: no-repeat;
-	font-size: 16px;
-	padding: 14px 20px 12px 45px;
-	border: none;
-	border-bottom: 1px solid #ddd;
-  }
-  
-  #myInput:focus {outline: 3px solid #ddd;}
-  
-  .dropdown {
-	position: relative;
-	display: inline-block;
-  }
-  
-  .dropdownContent {
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-
-  .dropdownContent a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-  }
-
-  .dropdownContent a:hover {
-	background-color: #f1f1f1;
-  }
-
-  .show {
-	display: block;
-  }
-  
-/* Dropdown button - Categories*/
-/* Dropdown Button */
-.dropbtn {
-	background-color: #3498DB;
-	color: white;
-	padding: 16px;
-	font-size: 16px;
-	border: none;
-	cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-	background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-	position: relative;
-	display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-  }
+ 
 
   a:hover {
 	background-color: #f0f0f0;
   }
   
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+
 
 @media screen and (max-width: 768px) {
 	nav ul {
@@ -218,4 +254,10 @@ header {
 	.logotext {
 		flex-direction: column;
 	  }
+
+	.dark-light:checked + label,
+	.dark-light:not(:checked) + label{
+	top: 20px;
+	right: 20px;
+	}
 }
